--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
+.textStyle {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 14pt;
+}
+
+.sectionHeader {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18pt;
+}
+
 .charcoal {
     background-color: #494c50;
 }
@@ -8,9 +18,15 @@
 
 .stageicon {
 	width: 32px;
-	margin-right: 2px;
 }
 
-.column {
-	width: 33.33%;
+.npcicon {
+    width: 24px;
+    object-fit: contain;
+    margin-left: 6px;
+    opacity: 50%;
+}
+
+.full-opacity {
+    opacity: 100%;
 }
